Add a new fragment as a placeholder for where we want to put the camera.
Will eventually use the camera2 api and try to render the camera preview to the SurfaceView.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,7 +14,11 @@
     <action
         android:id="@+id/action_FirstFragment_to_SecondFragment"
         app:destination="@id/SecondFragment" />
+    <action
+        android:id="@+id/action_FirstFragment_to_CameraFragment"
+        app:destination="@id/CameraFragment" />
   </fragment>
+
   <fragment
       android:id="@+id/SecondFragment"
       android:name="com.example.technovationtestproject.SecondFragment"
@@ -23,6 +27,17 @@
 
     <action
         android:id="@+id/action_SecondFragment_to_FirstFragment"
+        app:destination="@id/FirstFragment" />
+  </fragment>
+
+  <fragment
+      android:id="@+id/CameraFragment"
+      android:name="com.example.technovationtestproject.CameraFragment"
+      android:label="@string/camera_fragment_label"
+      tools:layout="@layout/fragment_camera">
+
+    <action
+        android:id="@+id/action_CameraFragment_to_FirstFragment"
         app:destination="@id/FirstFragment" />
   </fragment>
 </navigation>
