--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -4,36 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstFragment">
-
-  <Button
-      android:id="@+id/button_first"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/next"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/textview_first" />
+    tools:context=".CameraFragment">
 
   <TextView
-      android:id="@+id/textview_first"
+      android:id="@+id/camera_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="@string/first_fragment_title"
-      app:layout_constraintBottom_toTopOf="@id/button_first"
+      android:text="@string/camera_fragment_text"
+      app:layout_constraintBottom_toTopOf="@+id/home_button"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
   <Button
-      android:id="@+id/button_camera"
+      android:id="@+id/home_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="39dp"
-      android:text="@string/camera_button_name"
+      android:text="@string/home_button_text"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/button_first"
-      app:layout_constraintVertical_bias="0.3" />
+      app:layout_constraintTop_toBottomOf="@+id/camera_text" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
